# ai-eval-harness

./: .env.example  .gitattributes  .gitignore  BUILD_PLAN.md  BUILD_PLAN_PHASE2.md  BUILD_PLAN_PHASE3.md  CLAUDE.md  FINDINGS.md  LICENSE  Makefile  PROJECT.md  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
configs/: run_v1.yaml  run_v2_prompt_v1.yaml  run_v2_prompt_v2.yaml  run_v3_haiku.yaml
data/gold/: gold_test_cases.jsonl  gold_test_cases_v2.jsonl
data/requirements/: mvp_dataset.jsonl  mvp_dataset_v2.jsonl
data/runs/: run_v1.json  run_v2_prompt_v2_20260426T230809Z.json
docs/: architecture.md  dataset_design.md  example_report.md  report_examples.md  review_workflow.md
docs/history/: BUILD_PLAN.md  BUILD_PLAN_PHASE2.md  BUILD_PLAN_PHASE3.md  README.md
reports/: run_v1_report.md  run_v1_scores.csv  run_v2_prompt_v2_20260426T230809Z_report.md  run_v2_prompt_v2_20260426T230809Z_scores.csv
scripts/: check_quality_gate.py
src/harness/: __main__.py  charts.py  cli.py  compare_report.py  evaluate.py  generate.py  heuristic_scorer.py  llm_judge.py  loaders.py  model_adapter.py  paths.py  report.py  review_cli.py  review_queue.py  run_eval.py  schemas.py  score.py  scorer_base.py  trend_report.py
src/harness/prompts/: judge_v1.txt  v1.txt  v2.txt  v3.txt
tests/: factories.py  test_bug_regressions.py  test_charts.py  test_cli.py  test_compare_report.py  test_evaluate.py  test_evaluate_followups.py  test_generate.py  test_generate_followups.py  test_integration.py  test_llm_judge.py  test_loaders.py  test_model_adapter.py  test_packaging.py  test_parsing.py  test_paths.py  test_report.py  test_report_followups.py  test_review_cli.py  test_review_cli_followups.py  test_run_eval.py  test_scoring.py  test_scoring_v2.py  test_thresholds.py  test_trend_followups.py  test_trend_report.py
