[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "harness"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "pydantic>=2.0",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "typing-extensions>=4.0",
]

[project.scripts]
harness = "harness.cli:main"

[project.urls]
Repository = "https://github.com/sirthus/ai-eval-harness"
Documentation = "https://github.com/sirthus/ai-eval-harness/blob/master/docs/architecture.md"

[project.optional-dependencies]
charts = [
    "matplotlib>=3.8",
    "numpy>=1.24",
]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "pytest-mock>=3.0",
    "ruff>=0.4",
    "setuptools>=68",
    "wheel>=0.42",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
harness = ["prompts/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::pytest.PytestCollectionWarning"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "W"]
